--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,28 @@
 
 </head>
 <body>
-<h2>Insecure Page</h2>
-<a href="/secure">Secure Page</a>
+<a href="/add">Add a Course</a><br/>
+<table>
+    <tr>
+        <th>Title</th>
+        <th>Instructor</th>
+        <th>Credits</th>
+        <th>Description</th>
+        <th>Actions</th>
+    </tr>
+    <tr th:each="course : ${courses}">
+        <td th:text="${course.title}"></td>
+        <td th:text="${course.instructor}"></td>
+        <td th:text="${course.credit}"></td>
+        <td th:text="${course.description}"></td>
+        <td>
+            <a th:href="@{/detail/{id}(id=${course.id})}">Details</a> -
+            <span th:if="${user_id == course.user.id}">
+                <a th:href="@{/update/{id}(id=${course.id})}">Update</a> -
+                <a th:href="@{/delete/{id}(id=${course.id})}">Delete</a>
+            </span>
+        </td></tr>
+</table>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
